force-app/main/default/src/objects/Loop__Form_Rule__c/Loop__Form_Rule__c.object-meta.xml
<CustomObject>
    <label>Form Rule</label>
    <nameField>
        <displayFormat>FR-{00000}</displayFormat>
        <label>Form Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>