force-app/main/default/src/objects/Loop__Form_Rule__c/fields/Loop__Actions__c.field-meta.xml
<CustomField>
    <fullName>Loop__Actions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>